initalize another data

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1 x-data="{ message: 'I ❤️ Alpine JS' }" x-text="message"></h1>
+    Welcome, <p x-data="{name: 'Yanik Kumar'}" x-text="name" style="display: inline;"></p>
 </body>
 </html>
