Visibility code added

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 <body>
     <h1 x-data="{ message: 'I ❤️ Alpine JS' }" x-text="message"></h1>
     Welcome, <p x-data="{name: 'Yanik Kumar'}" x-text="name" style="display: inline;"></p>
+
+    <hr>
+    <ul>
+        <li>
+            <a href="visibility.html">Visibility</a>
+        </li>
+        <li>
+            <a href="visibility.html">Visibility</a>
+        </li>
+    </ul>
 </body>
 </html>
