--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="visibility.html">Visibility</a>
         </li>
         <li>
-            <a href="visibility.html">Visibility</a>
+            <a href="model.html">Model</a>
         </li>
     </ul>
 </body>
