Search images and display

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
             <a href="model.html">Model</a>
         </li>
+        <li>
+            <a href="imagefinder.html">Image Finder</a>
+        </li>
     </ul>
 </body>
 </html>
