more inputs work in progress

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="imagefinder.html">Image Finder</a>
         </li>
+        <li>
+            <a href="moreinputs.html">More Inputs</a>
+        </li>
     </ul>
 </body>
 </html>
