--- a/moreinputs.html
+++ b/moreinputs.html
@@ -1,37 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Alpine JS</title>
-    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-</head>
-<body>
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+  </head>
+  <body>
     <div x-data="{agreed: false}">
-        <input type="checkbox" x-model="agreed" />
-        <span x-show="agreed">
-            You have agreed the terms and conditions.
-        </span>
+      <input type="checkbox" x-model="agreed" />
+      <span x-show="agreed"> You have agreed the terms and conditions. </span>
     </div>
-    <hr>
+    <hr />
 
     <div x-data="{records: []}">
-        <input type="checkbox" name="record_1" x-model="records" value="1">
-        <input type="checkbox" name="record_2" x-model="records" value="2">
-        <input type="checkbox" name="record_3" x-model="records" value="3">
-        <br>
-        <span x-text="records"></span>
+      <input type="checkbox" name="record_1" x-model="records" value="1" />
+      <input type="checkbox" name="record_2" x-model="records" value="2" />
+      <input type="checkbox" name="record_3" x-model="records" value="3" />
+      <br />
+      <span x-text="records"></span>
     </div>
 
-    <hr>
+    <hr />
 
-    <div x-data="{users: []}">
-        <input type="checkbox" name="record_1" x-model="records" value="1"> Yanik Kumar
-        <input type="checkbox" name="record_2" x-model="records" value="2"> Believe Master
-        <input type="checkbox" name="record_3" x-model="records" value="3"> Coding Ninja
-        <br>
-        <span x-text="records"></span>
+    <form
+      x-data="{
+    users: [],
+    deleteUsers() {
+        console.log(this.users);
+    }
+    }"
+      @submit.prevent="deleteUsers"
+    >
+      <input type="checkbox" x-model="users" value="1" /> Yanik Kumar
+      <input type="checkbox" x-model="users" value="2" /> Believe Master
+      <input type="checkbox" x-model="users" value="3" /> Coding Ninja
+      <br />
+      <button>Delete</button>
+    </form>
+
+    <hr />
+
+    <div
+      x-data="{
+        plan: ''
+    }"
+    >
+      <select x-model="plan">
+        <option value="">Please Choose</option>
+        <option value="yearly">Yearly</option>
+        <option value="monthly">Monthly</option>
+      </select>
+
+      <span x-show="plan" x-text="`You've choosen the ${plan} plan`"></span>
     </div>
 
-</body>
+    <hr />
+
+    <div
+      x-data="{
+    plan: 'monthly'
+    }"
+    >
+    <input type="radio" name="plan" value="monthly" x-model="plan" /> Monthly
+    <input type="radio" name="plan" value="yearly" x-model="plan" /> Yearly
+    
+    <span x-show="plan" x-text="`You've choosen the ${plan} plan`"></span>
+</div>
+  </body>
 </html>
