--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li>
             <a href="moreinputs.html">More Inputs</a>
         </li>
+        <li>
+            <a href="attributebind.html">Attribute Bindings</a>
+        </li>
     </ul>
 </body>
 </html>
