updated index file list

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <li>
             <a href="attributebind.html">Attribute Bindings</a>
         </li>
+        <li>
+            <a href="attributebindexample.html">Attribute Bindings Examples</a>
+        </li>
+        <li>
+            <a href="texthtml.html">Text HTML</a>
+        </li>
+        <li>
+            <a href="markdownparser.html">Markdown Parser</a>
+        </li>
     </ul>
 </body>
 </html>
