looping and key, unique identifier

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li>
             <a href="markdownparser.html">Markdown Parser</a>
         </li>
+        <li>
+            <a href="looping.html">Looping</a>
+        </li>
     </ul>
 </body>
 </html>
