--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>
             <a href="looping.html">Looping</a>
         </li>
+        <li>
+            <a href="xshowxif.html">x-show x-if</a>
+        </li>
     </ul>
 </body>
 </html>
