event handling in alpine

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <li>
             <a href="xshowxif.html">x-show x-if</a>
         </li>
+        <li>
+            <a href="eventhandling.html">Event Handling</a>
+        </li>
     </ul>
 </body>
 </html>
