--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <li>
             <a href="eventhandling.html">Event Handling</a>
         </li>
+        <li>
+            <a href="modalevents.html">Model with Custom Events</a>
+        </li>
     </ul>
 </body>
 </html>
