--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <li>
             <a href="modalevents.html">Model with Custom Events</a>
         </li>
+        <li>
+            <a href="elalpine.html">$el in Alpine</a>
+        </li>
     </ul>
 </body>
 </html>
