to live watch in alpine

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
         <li>
             <a href="elalpine.html">$el in Alpine</a>
         </li>
+        <li>
+            <a href="watching.html">Watching</a>
+        </li>
     </ul>
 </body>
 </html>
