Hackernews search results example

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <li>
             <a href="watching.html">Watching</a>
         </li>
+        <li>
+            <a href="hackernewssearch.html">Hacker News Search ($watch example)</a>
+        </li>
     </ul>
 </body>
 </html>
