--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <li>
             <a href="hackernewssearch.html">Hacker News Search ($watch example)</a>
         </li>
+        <li>
+            <a href="refs.html">Refs</a>
+        </li>
     </ul>
 </body>
 </html>
