--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <li>
             <a href="refs.html">Refs</a>
         </li>
+        <li>
+            <a href="cloak.html">Cloak</a>
+        </li>
     </ul>
 </body>
 </html>
